# RAmpSim

./: Cargo.toml  README.md
examples/: abundances.txt  probe_mult.tsv  seqid2refid.txt
scripts/: profile.sh  profile_kraken.sh
src/: main.rs
src/utils/: TNN.py  align.rs  mod.rs  plotting.py  process_probes.py  sim.rs  thermo.rs
