[package]
name = "read_sim"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
arrayvec = "0.7.6"
bam = "0.1.4"
bio = { version = "2.2.0", features = ["generic-simd", "runtime-dispatch-simd"] }
circular-buffer = "1.0.0"
clap = { version = "4.5.35", features = ["derive"] }
crossbeam = { version = "0.8.4", features = ["crossbeam-queue"] }
lazy_static = "1.5.0"
nalgebra = "0.33.2"
rand = "0.9.2"
rand_distr = "0.5.1"
rayon = "1.10.0"
rustc-hash = "2.1.1"
seq_io = "0.3.3"
serde = "1.0.219"
statrs = "0.18.0"
tqdm = "0.7.0"
utf8-chars = "3.0.5"
wyhash = "0.5.0"
