[package]
name = "read_sim"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bam = "0.1.4"
clap = { version = "4.5.35", features = ["derive"] }
rand = "0.9.2"
rand_distr = "0.5.1"
seq_io = "0.3.3"
serde = "1.0.219"
